# flight_runner

./: .dockerignore  .gitignore  .vercelignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  tsconfig.base.json  vercel.json
.github/workflows/: index-leaderboard.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: backgrounds.ts  intermissions.ts  intro.ts  main.ts  outros.ts
apps/web/src/chain/: config.ts  game-hub.ts  pending-proof.ts  relay.ts  run-state.ts  score-sync.ts  transcript-buffer.ts  wallet.ts
apps/web/src/landing/: contracts.ts  games.ts  how-it-works.ts  landing.ts  leaderboard.ts
apps/web/src/scenes/: BootScene.ts  PlayScene.ts
apps/web/src/share/: boast.ts  celebration.ts  config.ts  share-rank-button.ts
apps/web/src/ui/: back-link.ts  rewards-callout.ts  signin-tip.ts  submit-ui.ts  wallet-panel.ts
apps/web/tests/: birds.mjs  collision.mjs  hitbox_check.mjs  plane_alpha.mjs  smoke.mjs  stages.mjs  token_check.mjs  token_pixels.mjs
archive/: Dockerfile
contracts/: Cargo.toml
contracts/game_hub/: Cargo.toml
contracts/game_hub/src/: lib.rs  test.rs
contracts/game_hub/test_snapshots/test/: add_game_happy_path.1.json  add_game_rejects_collision.1.json  cancel_run_frees_active_slot_for_same_game.1.json  cancel_run_rejects_already_settled_run.1.json  enumeration_adds_each_unique_pubkey_once.1.json  enumeration_isolated_per_game.1.json  enumeration_starts_at_zero.1.json  get_players_page_caps_at_max_page_size.1.json  get_players_page_returns_requested_range.1.json  get_run_returns_none_for_unknown_run.1.json  get_score_returns_none_when_player_has_not_submitted.1.json  high_scores_are_isolated_per_game.1.json  high_scores_are_isolated_per_player.1.json  high_scores_isolated_per_game.1.json  high_scores_isolated_per_player.1.json  initialize_rejects_double_init.1.json  initialize_succeeds_on_fresh_contract.1.json  rotate_admin_happy_path.1.json  rotate_admin_rejects_before_initialize.1.json  set_image_id_rotates_in_place.1.json  set_paused_toggles_flag.1.json  set_trusted_operator_rotates_in_place.1.json  set_trusted_operator_round_trip.1.json  set_verifier_rejects_before_initialize.1.json  set_verifier_swaps_address.1.json  settle_attested_and_submit_score_share_leaderboard.1.json  settle_attested_enumeration_works.1.json  settle_attested_higher_replaces_pb.1.json  settle_attested_panics_on_cross_game_replay.1.json  settle_attested_panics_on_wrong_signer.1.json  settle_attested_records_first_score.1.json  settle_run_equal_score_lower_ticks_keeps_pb.1.json  settle_run_higher_score_replaces_personal_best.1.json  settle_run_lower_score_consumes_run_but_keeps_pb.1.json  settle_run_records_first_score_and_marks_settled.1.json  settle_run_rejects_bad_seal_size.1.json  settle_run_rejects_double_settle.1.json  settle_run_rejects_paused_game.1.json  settle_run_rejects_seed_mismatch.1.json  settle_run_tie_break_by_ticks_replaces_pb.1.json  (+14 more)
contracts/mock_verifier/: Cargo.toml
contracts/mock_verifier/src/: lib.rs
docs/: boundless-wallet.md
public/assets/: assets.json
public/leaderboard/: birdstrike.json
scripts/: deploy.sh  index-leaderboard.ts  prove.sh  smoke.sh  worker.sh
services/prover/core/: Cargo.toml
services/prover/core/src/: constants.rs  fp.rs  lib.rs  prng.rs  serialize.rs  stages.rs  state.rs  step.rs  transcript.rs  types.rs
services/prover/core/tests/: corpus_parity.rs
services/prover/guest/: Cargo.toml
services/prover/guest/src/: main.rs
services/prover/host/: Cargo.toml
services/prover/host/src/: boundless_path.rs  main.rs
services/prover/methods/: Cargo.toml  build.rs
services/prover/methods/src/: lib.rs
services/prover/replay/: Cargo.toml
services/prover/replay/src/: main.rs
services/server/: .env.example  package.json  tsconfig.json
services/server/src/: attest.ts  chain.ts  config.ts  db.ts  index.ts  refresh.ts  submit.ts
services/server/src/routes/: public.ts  worker.ts
spec/: architecture.md  phase-11-runbook.md  phases.md  zk_risk_0_stellar.md
vultr/: Caddyfile  README.md  cloud-init.yml  proofarcade-relay.service  proofarcade.env.example
