# Top-level Cargo workspace. The TS sim still lives under packages/sim/ via
# the pnpm workspace; this file is for the Rust mirror that the zkVM guest
# will eventually call into.
[workspace]
resolver = "2"
members = [
  "services/prover/core",
  "services/prover/methods",
  "services/prover/host",
]

# Guest is built for riscv32im-risc0-zkvm-elf — kept out of this workspace
# (it has its own empty [workspace] table in services/prover/guest/Cargo.toml).
# Soroban contracts are a third workspace (own release profile w/ lto+panic=abort,
# wasm32-unknown-unknown target); built independently from contracts/.
exclude = [
  "services/prover/guest",
  "contracts",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unused_must_use = "deny"
