[package]
name = "flight_scroll_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic Q24.8 sim for flight_scroll. Mirror of packages/sim/, ports tick-for-tick into the RISC Zero guest."

[lib]
# Keep the crate signature simple — guest, host, and parity-test harness all
# pull it in as a regular library. no_std + alloc shape lands when the zkVM
# guest scaffolding goes in later.
