[package]
name = "flight_guest"
version = "0.1.0"
edition = "2021"

# Standalone — kept OUT of the top-level workspace so cargo doesn't try to
# build it for the host triple. risc0-build invokes `cargo build` against the
# riscv32im-risc0-zkvm-elf target separately.
[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
flight_scroll_core = { path = "../core" }
bytemuck = "1"
