[package]
name = "flight_host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "flight-host CLI — drives the RISC Zero prover over a recorded transcript and writes proof_artifacts.json."

[[bin]]
name = "flight-host"
path = "src/main.rs"

[[bin]]
name = "image-id"
path = "src/bin/image_id.rs"

[dependencies]
risc0-zkvm = "3.0"
flight_methods = { path = "../methods" }
flight_scroll_core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
bincode = "1"
stellar-strkey = "0.0.13"

# --- Boundless marketplace path (feature-gated) -----------------------
# Enabled with `cargo build --release --bin flight-host --features boundless`.
# When off, none of these crates are compiled — the default local Groth16
# build is unchanged from Phase 11. When on, the `--boundless` CLI flag
# routes proving through the Boundless market instead of the local r0vm.
boundless-market = { version = "1.3", optional = true }
alloy = { version = "0.8", features = ["full"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
url = { version = "2.5", optional = true }

[features]
default = []
boundless = ["dep:boundless-market", "dep:alloy", "dep:tokio", "dep:url"]
